--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ body {
     line-height: 1.6;
 }
 
+@media (min-width: 1025px) {
+    body {
+        font-size: 16px; /* Ajustement de la taille de police pour les grands écrans */
+    }
+    img{
+        max-width: 100%;
+    }
+}
+
 .bkg_title{
     background-color: #EBECF1;
     justify-content: center;
@@ -32,6 +41,8 @@ p {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-right: 100px;
+    padding-left: 100px;
 }
 
 a {
@@ -58,7 +69,7 @@ fieldset {
 img {
     max-width: 100%;
     height: auto;
-    display: block;
+    display: flex;
     margin: 0 auto;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
