--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body {
     margin: 0;
     padding: 20px;
     background-color: #1B1C25;
-    color:#EBECF1;
+    color: #EBECF1;
     line-height: 1.6;
 }
 
-.larg_mod{
+.larg_mod {
     border: 1px transparent;
     width: 50%;
     height: 400px;
@@ -21,45 +21,61 @@ body {
     padding-top: 10px;
 }
 
-.larg_mod p{
+.larg_mod p {
     display: flex;
     justify-content: center;
 }
 
-strong{
+strong {
     color: #007bff;
 }
 
-.larg_mod h2{
+.larg_mod h2 {
     color: snow;
     margin-top: 20px;
     text-align: center;
 }
 
-.larg_mod:hover{
+.larg_mod:hover {
     background-color: mediumturquoise;
     transform-style: preserve-3d;
     transform: scale(1.02);
     transition: all ease 0.3s;
 }
 
-.container{
+.container1,
+.container2 {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    margin-right: 10px;
+    flex-direction: row;
     width: auto;
-    margin: 10px ;
+    margin: 10px;
 }
 
-.bkg_title{
+.bkg_title {
     background-color: #EBECF1;
     justify-content: center;
     display: flex;
     border-radius: 10px;
 }
 
-#myname{
+
+p a {
+    color: #00ff00;
+    cursor: pointer;
+}
+
+p a:visited{
+    color: yellowgreen;
+}
+
+p a:hover{
+    text-decoration: underline;
+    color: aqua;
+}
+
+#myname {
     font-family: 'Kalnia', serif;
     color: #EBECF1;
 }
@@ -131,30 +147,32 @@ button:hover {
     background-color: #0056b3;
 }
 
-footer{
+footer {
     display: flex;
     background-color: #206A5D;
     border-radius: 5px;
     justify-content: center;
-
 }
 
-footer p a img{
+footer p a img {
     margin-right: 10px;
 }
 
-.spacebetween{
+.spacebetween {
     padding: auto;
 }
 
-#mod_container{
-    height: 50vh;
-}
+@media screen and (max-width: 720px) {
+    .container1, .container2{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        padding-left: 10px 20px;
+    }
 
-@media screen and(max-width:720px){
     .larg_mod{
-        width: 94%;
-        height: 100px;
-        align-items: center;
+        width: 90%;
+        
     }
 }
